# glyphknit

./: .gitignore  CMakeLists.txt  COPYING  README.md  README.txt  TODO.txt  build.ninja  how-to-build-dependencies.txt
data/: COPYING  ISO-639-2_utf-8.txt  iso15924-utf8-20131012.txt
include/: at_scope_exit.hh  autorelease.hh  font.hh  language.hh  language_iterator.hh  mini_coretext_typesetter.hh  newline.hh  script_iterator.hh  split_runs.hh  tag.hh  text_block.hh  typesetter.hh  utf.hh
scripts/: generate_language_data.rb  generate_pairs_list.rb
scripts/lib/: helper.rb
src/: bidi_iterator.cc  font.cc  language-data.hh  language.cc  language_iterator.cc  mini_coretext_typesetter.cc  script_iterator-pairs.hh  script_iterator.cc  split_runs.cc  text_block.cc  typesetter.cc
test/: test-font.cc  test-language.cc  test-language_iterator.cc  test-main.cc  test-script_iterator.cc  test-split_runs.cc  test-text_block.cc  test-typeset.cc  test.h
